--- a/registration.html
+++ b/registration.html
@@ -16,7 +16,7 @@
 </head>
 <body class="registration">
 <div class="wrapper">
-    <main class="l_site-main">
+    <main id="l_site-main" class="l_site-main">
         <div class="container">
             <div class="row">
                 <div class="col-12 mt-lg-3 mt-xxl-5 mb-lx-5">
