--- a/dashboard.html
+++ b/dashboard.html
@@ -66,7 +66,7 @@
 </header>
 <!-- /header -->
 <div class="wrapper">
-    <main class="l_site-main">
+    <main id="l_site-main" class="l_site-main">
         <div class="container">
             <div class="row">
                 <div id="sidenav" class="col-xl-4 sidenav d-flex justify-content-center p-0">
@@ -453,7 +453,6 @@
 <script src="./js/app.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.0/fullcalendar.min.js"></script>
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script>
 
     //Full Calendar Init
