--- a/profile.html
+++ b/profile.html
@@ -66,7 +66,7 @@
 </header>
 <!-- /header -->
 <div class="wrapper">
-    <main class="l_site-main">
+    <main id="l_site-main" class="l_site-main">
         <div class="container">
             <div class="row">
                 <div class="col-xl-4 sidenav d-flex justify-content-center p-0">
