--- a/create_publication.html
+++ b/create_publication.html
@@ -336,7 +336,7 @@
                                     <form action="" method="post" id="create_post" enctype="multipart/form-data">
                                         <div class="account_select">
                                             <div class="form-group">
-                                                <label class="account_select-title" for="account_select">Select an
+                                                <label class="account_select-label" for="account_select">Select an
                                                     account to publish</label>
                                                 <select class="form-control publish_account custom_select"
                                                         name="account_select" id="account_select">
@@ -375,26 +375,25 @@
                                         </div>
                                         <div class="template_select">
                                             <div class="form-group">
-                                                <label class="template_select-title" for="template_select">Select
+                                                <label class="template_select-label" for="template_select">Select
                                                     template</label>
                                                 <select class="form-control custom_select" name="template_select"
                                                         id="template_select">
-                                                    <option value="calendar" data-description="Шаблон 1">#sun #summer
-                                                        #girl #like
+                                                    <option value="calendar" data-description="#sun #summer
+                                                        #girl #like">Шаблон 1
                                                     </option>
-                                                    <option value="shopping_cart" data-description="Шаблон Test">#sun
-                                                        #summer #girl #like #sun #summer #girl #like #sun #summer #girl
-                                                        #like
+                                                    <option value="shopping_cart" data-description="#summer #girl #like #sun #summer #girl #like #sun #summer #girl
+                                                        #like">Шаблон Test
                                                     </option>
-                                                    <option value="cd" data-description="Шаблон 2">CD</option>
-                                                    <option value="email" data-description="Шаблон 5">Email</option>
-                                                    <option value="faq" data-description="Шаблон 31">FAQ</option>
+                                                    <option value="cd" data-description="CD">Шаблон 2</option>
+                                                    <option value="email" data-description="Email">Шаблон 5</option>
+                                                    <option value="faq" data-description="FAQ">Шаблон 31</option>
                                                 </select>
                                             </div>
                                         </div>
                                         <div class="post_description">
                                             <div class="form-group">
-                                                <label class="post_description-label" for="post_description">Enter a description of post</label>
+                                                <h3 class="post_description-title">Enter a description of post</h3>
                                                 <div class="post_description-decorator">
                                                 <textarea class="form-control" id="post_description"
                                                           rows="8" placeholder="Type here"></textarea>
@@ -404,7 +403,7 @@
                                        </div>
                                         <div class="post_comment">
                                             <div class="form-group">
-                                                <label class="post_comment-label" for="post_comment">Enter the first comment</label>
+                                                <h3 class="post_comment-title">Enter the first comment</h3>
                                                 <textarea class="form-control" id="post_comment"
                                                           rows="9" placeholder="Type here"></textarea>
                                             </div>
@@ -412,7 +411,7 @@
                                         <div class="form-group">
                                             <button type="reset" class="btn btn-inline-custom4 w-45 btn-cancel px-0">Отмена</button>
                                             <button type="button" class="btn btn-inline-custom4 w-45 float-right px-0">Что-то дабавить</button>
-                                            <button type="submit" class="btn btn-inline-custom5 w-100 mt-3">Опубликовать моментально</button>
+                                            <button type="submit" class="btn btn-inline-custom5 w-100 mt-3 px-0">Опубликовать моментально</button>
                                         </div>
                                     </form>
                                 </div>
@@ -518,7 +517,7 @@
 </div>
 <!-- /wrapper -->
 <script type="text/template" id="qq-template">
-    <div class="qq-uploader-selector qq-uploader qq-gallery" qq-drop-area-text="Drop files here">
+    <div class="qq-uploader-selector qq-uploader qq-gallery">
         <div class="qq-total-progress-bar-container-selector qq-total-progress-bar-container">
             <div role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"
                  class="qq-total-progress-bar-selector qq-progress-bar qq-total-progress-bar"></div>
