--- a/create_publication.html
+++ b/create_publication.html
@@ -15,7 +15,8 @@
     <link rel="stylesheet" href="./css/app.css">
     <title>Hello, world!</title>
 </head>
-<body class="profile">
+<body class="create_publication">
+<div class="wrapper">
 <header class="l_header">
     <div class="container p-sm-0">
         <nav class="navbar navbar-expand-lg l_header--navbar fixed-md-top">
@@ -66,7 +67,6 @@
     </div>
 </header>
 <!-- /header -->
-<div class="wrapper">
     <main id="l_site-main" class="l_site-main">
         <div class="container">
             <div class="row">
