--- a/create_publication.html
+++ b/create_publication.html
@@ -617,7 +617,7 @@
         try {
             $("body .custom_select").msDropDown();
         } catch (e) {
-            alert(e.message);
+            console.log(e.message);
         }
     });
 </script>
