--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<header class="l_header d-lg-flex align-items-lg-center">
+<header class="l_site-header d-lg-flex align-items-lg-center">
     <div class="container p-sm-0 bgg">
         <div class="bgg2"></div>
         <nav class="navbar navbar-expand-lg p-sm-0 pt-sm-5 l_header--navbar">
