--- a/treatment.html
+++ b/treatment.html
@@ -126,6 +126,56 @@
                                                         </td>
                                                         <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</td>
                                                         <td>Ожидание ответа</td>
+                                                    </tr>                                                    <tr>
+                                                        <td>
+                                                            227482
+                                                            <span class="date">23.04.2019</span>
+                                                        </td>
+                                                        <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</td>
+                                                        <td>Ожидание ответа</td>
+                                                    </tr>                                                    <tr>
+                                                        <td>
+                                                            227482
+                                                            <span class="date">23.04.2019</span>
+                                                        </td>
+                                                        <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</td>
+                                                        <td>Ожидание ответа</td>
+                                                    </tr>                                                    <tr>
+                                                        <td>
+                                                            227482
+                                                            <span class="date">23.04.2019</span>
+                                                        </td>
+                                                        <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</td>
+                                                        <td>Ожидание ответа</td>
+                                                    </tr>                                                    <tr>
+                                                        <td>
+                                                            227482
+                                                            <span class="date">23.04.2019</span>
+                                                        </td>
+                                                        <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</td>
+                                                        <td>Ожидание ответа</td>
+                                                    </tr>                                                    <tr>
+                                                        <td>
+                                                            227482
+                                                            <span class="date">23.04.2019</span>
+                                                        </td>
+                                                        <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</td>
+                                                        <td>Ожидание ответа</td>
+                                                    </tr>                                                    <tr>
+                                                        <td>
+                                                            227482
+                                                            <span class="date">23.04.2019</span>
+                                                        </td>
+                                                        <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</td>
+                                                        <td>Ожидание ответа</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>
+                                                            227482
+                                                            <span class="date">23.04.2019</span>
+                                                        </td>
+                                                        <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</td>
+                                                        <td>Ожидание ответа</td>
                                                     </tr>
                                                     </tbody>
                                                 </table>
