--- a/features.html
+++ b/features.html
@@ -7,23 +7,24 @@
           content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height">
     <meta content="ie=edge" http-equiv="X-UA-Compatible"/>
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700|Rubik:400,500,700" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.0/fullcalendar.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,900|Rubik:400,500,700"
+          rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="./css/app.css">
 
     <title>Hello, world!</title>
 </head>
-<body class="add_description">
+<body class="l_features">
 <div class="wrapper">
-<header class="l_header">
-    <div class="container p-sm-0">
-        <nav class="navbar navbar-expand-lg l_header--navbar fixed-md-top">
-            <a class="navbar-brand" href="#">
-                <img src="./images/logo.png" alt="">
-            </a>
-            <button class="l-navbar--toggler" type="button"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <header class="l_site-header d-lg-flex align-items-lg-center">
+        <div class="container p-sm-0 bgg">
+            <div class="bgg2"></div>
+            <nav class="navbar navbar-expand-lg p-sm-0 pt-sm-5 l_header--navbar">
+                <a class="navbar-brand mr-xl-7 mr-lg-5" href="#">
+                    <img src="./images/logo.png" alt="">
+                </a>
+                <button class="l-navbar--toggler" type="button"
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="30" height="30"
                          focusable="false">
@@ -32,69 +33,81 @@
                               d="M4 7h22M4 15h22M4 23h22"></path>
                     </svg>
                 </span>
-            </button>
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav l_header--menu text-center ml-auto mr-lg-2 d-flex align-items-center">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Faq</a>
-                    </li>
-                    <li class="nav-item">
-                        <span class="l_tariff-range mr-lg-3">Осталось: 100 дней</span>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="l_tariff-button mr-lg-3">Basic</a>
-                    </li>
-                    <li class="nav-item">
-                        <ul class="navbar-nav">
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    darkdrim@ukr.net
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="#">Action</a>
-                                    <a class="dropdown-item" href="#">Another action</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="#">Something else here</a>
-                                </div>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </div>
-</header>
-<!-- /header -->
+                </button>
+                <div class="collapse navbar-collapse">
+                    <ul class="navbar-nav mr-auto l_header--menu text-center">
+                        <li class="nav-item l_lang">
+                            <a class="nav-link l_current_lang--ru" href="#">РУС</a><a
+                                class="nav-link l_current_lang--en"
+                                href="#">ENG</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Тарифы</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">О Проекте</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Faq</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link l_auth__button btn" href="#">Войти</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <!-- /header -->
     <main id="l_site-main" class="l_site-main">
         <div class="container">
             <div class="row">
-                <div class="col-12 mt-lg-4 mt-xxl-5 mb-lx-5">
-                    <h1 class="text-center l_add-desc-title">Добавить шаблон</h1>
-                    <div class="l_add-desc d-flex justify-content-center">
-                        <div class="l_add-desc-container">
+                <div class="col-12 mt-lg-4 mt-xxl-5 mb-lx-5 text-center">
+                    <h1 class="text-center l_features-title">Решай сам что ты хочешь видеть в продукте</h1>
+                    <h2 class="text-center l_features-sub_title">Голосуй за новые фичи</h2>
+                    <div class="l_features-vote d-flex justify-content-center">
+                        <div class="l_features-vote_container">
                             <form>
-                                <div class="form-group mb-lg-4 mb-3">
-                                    <input type="text" class="form-control custom-field3"
-                                           placeholder="Имя Шаблона">
+                                <div class="form-group mb-lg-5 mb-3 required">
+                                    <input required type="text" class="form-control custom-field3" placeholder="Email">
                                 </div>
-                                <div class="form-group mb-lg-3 mb-3">
-                                    <textarea class="form-control custom-control custom-field3" name="name" rows="4" placeholder="Type Введите текст шаблона описания"></textarea>
+                                <div class="form-group mb-lg-5 mb-3">
+                                    <div class="custom-check-title required">
+                                        Выберите наиболее нужные по Вашему мнению фичи
+                                    </div>
+                                    <div class="custom-check_container">
+                                        <div>
+                                            <label class="custom_check">
+                                                <input class="toggle__input" type="checkbox">
+                                                <span class="toggle__label">
+                                              <span class="toggle__text">Check Me!</span>
+                                            </span>
+                                            </label>
+                                        </div>
+                                        <div>
+                                            <label class="custom_check">
+                                                <input class="toggle__input" type="checkbox">
+                                                <span class="toggle__label">
+                                              <span class="toggle__text">Выберите наиболее нужные по Вашему мнению фичи</span>
+                                            </span>
+                                            </label>
+                                        </div>
+                                        <div>
+
+                                            <label class="custom_check">
+                                                <input class="toggle__input" type="checkbox">
+                                                <span class="toggle__label">
+                                              <span class="toggle__text">Фича 3</span>
+                                            </span>
+                                            </label>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="form-group mb-lg-3 mb-3 d-flex">
-                                    <label for="spintax_switch" class="spintax_label">This is Spintax</label>
-                                    <span class="switch_box box">
-                                        <input name="spintax" id="spintax_switch" type="checkbox" class="switch">
-                                    </span>
-                                    <a href="#" class="spintax_label-help">Нужна помощь по Spintax</a>
+                                <div class="form-group mb-lg-5 mb-3">
+                                    <textarea class="form-control custom-control custom-field3" name="name" rows="4"
+                                              placeholder="Введите дополнительное описание своей позиции или можете предложить свои"></textarea>
                                 </div>
-                                <div class="form-group mb-lg-4 mb-3 d-flex">
-                                    <label for="default_template" class="default-template_label">Use this template like default</label>
-                                    <span class="switch_box box">
-                                        <input name="default_template" id="default_template" type="checkbox" class="switch">
-                                    </span>
-                                </div>
-                                <button type="submit" class="btn btn-inline-custom4 mb-3 w-100">Сохранить</button>
+                                <button type="submit" class="btn btn-inline-custom4 mb-3 w-100">Голосовать</button>
                             </form>
                         </div>
                     </div>
@@ -198,6 +211,5 @@
 <!-- /wrapper -->
 <!-- Main JavaScript -->
 <script src="./js/app.js"></script>
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 </html>
