--- a/tariff_pop_up.html
+++ b/tariff_pop_up.html
@@ -129,7 +129,7 @@
                 </div>
                 <div class="modal-body">
                     <form action="">
-                        <div class="form-group my-4">
+                        <div class="form-group mt-4 mb-4 ml-4 ml-sm-0">
                             <label class="l_radio">
                                 <input  type="radio" name="radio" />
                                 <span class="l_radio__text">Месяц</span>
@@ -138,7 +138,7 @@
                                 ₽ 290 <span class="price-period">/мес</span>
                             </div>
                         </div>
-                        <div class="form-group my-4">
+                        <div class="form-group mt-4 mb-4 ml-4 ml-sm-0">
                             <label class="l_radio">
                                 <input  type="radio" name="radio" />
                                 <span class="l_radio__text">3 Месяца</span>
@@ -148,7 +148,7 @@
                                 <span class="price-sale">(скидка 5%)</span>
                             </div>
                         </div>
-                        <div class="form-group my-4">
+                        <div class="form-group mt-4 mb-4 ml-4 ml-sm-0">
                             <label class="l_radio">
                                 <input  type="radio" name="radio" checked />
                                 <span class="l_radio__text">6 Месяца</span>
@@ -158,7 +158,7 @@
                                 <span class="price-sale">(скидка 5%)</span>
                             </div>
                         </div>
-                        <div class="form-group my-4">
+                        <div class="form-group mt-4 mb-4 ml-4 ml-sm-0">
                             <label class="l_radio">
                                 <input  type="radio" name="radio" />
                                 <span class="l_radio__text">Год</span>
@@ -169,6 +169,18 @@
                                 <span class="price-sale">(скидка 5%)</span>
                             </div>
                         </div>
+                        <p class="price_economy mb-4">
+                            Экономия <span class="price_economy-count">₽ 290</span>
+                        </p>
+                        <div class="form-group">
+                            <input type="text" class="form-control custom-field3 icon-credit-input credit-input" placeholder="XXXX XXXX XXXX XXXX">
+                        </div>
+                        <div class="form-group d-flex justify-content-between">
+                            <input type="text" class="form-control custom-field3 icon-credit-cxp cxp-input" placeholder="XX/XX">
+                            <input type="text" class="form-control custom-field3 icon-credit-cvc cvc-input" placeholder="XXX">
+                        </div>
+                        <a href="#" class="coupon_sale mb-4">У меня есть купон на скидку</a>
+                        <button type="submit" class="btn btn-inline-custom w-100 p-07 p-xxl-3 mb-3 btn-custom-lg">Оплатить ₽ 275</button>
                     </form>
                 </div>
             </div>
