--- a/404.html
+++ b/404.html
@@ -63,7 +63,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="l_404-container">
-                        <img src="./images/404.svg" alt="404" />
+                        <img class="img-fluid" src="./images/404.svg" alt="404" />
                         <h1 class="l_404-title">
                             ОЙ! Страница не найдена
                         </h1>
