--- a/FAQ.html
+++ b/FAQ.html
@@ -76,11 +76,11 @@
                     <div class="l_faq-container w-100">
                         <div class="accordion" id="accordionExample">
                             <div class="card">
-                                <div class="card-header" id="headingOne">
+                                <div class="card-header collapsed" id="headingOne" data-toggle="collapse" data-target="#collapseOne"
+                                     aria-expanded="true" aria-controls="collapseOne">
                                     <h2 class="mb-0 pr-sm-2">
                                         Ознакомьтесь с правилами безопасновсти
-                                        <span class="rules_desc collapsed" data-toggle="collapse" data-target="#collapseOne"
-                                              aria-expanded="true" aria-controls="collapseOne">
+                                        <span class="rules_desc">
                                             </span>
                                     </h2>
                                 </div>
@@ -110,11 +110,11 @@
                         </div>
                         <div class="accordion" id="accordionExample2">
                             <div class="card">
-                                <div class="card-header" id="heading2">
+                                <div class="card-header" id="heading2" data-toggle="collapse" data-target="#collapse2"
+                                     aria-expanded="true" aria-controls="collapse2">
                                     <h2 class="mb-0 pr-sm-2">
                                         Ознакомьтесь с правилами безопасновсти
-                                        <span class="rules_desc" data-toggle="collapse" data-target="#collapse2"
-                                              aria-expanded="true" aria-controls="collapse2">
+                                        <span class="rules_desc">
                                             </span>
                                     </h2>
                                 </div>
