--- a/first_screen.html
+++ b/first_screen.html
@@ -14,7 +14,7 @@
 
     <title>Hello, world!</title>
 </head>
-<body>
+<body class="first_screen">
 <div class="wrapper">
 <header class="l_header">
     <div class="container p-sm-0">
