--- a/add_account.html
+++ b/add_account.html
@@ -76,10 +76,10 @@
                         <div class="l_add-account-container w-100">
                             <div class="accordion" id="accordionExample">
                                 <div class="card">
-                                    <div class="card-header" id="headingOne">
+                                    <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                         <h2 class="mb-0">
                                             Ознакомьтесь с правилами безопасновсти
-                                            <span class="rules_desc" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                            <span class="rules_desc">
                                             </span>
                                         </h2>
                                     </div>
