--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <header class="l_site-header d-lg-flex align-items-lg-center">
     <div class="container p-sm-0 bgg">
         <div class="bgg2"></div>
-        <nav class="navbar navbar-expand-lg p-sm-0 pt-sm-5 l_header--navbar">
-            <a class="navbar-brand mr-xl-7 mr-lg-5" href="#">
+        <nav class="navbar navbar-expand-lg l_header--navbar">
+            <a class="navbar-brand" href="#">
                 <img src="./images/logo.png" alt="">
             </a>
             <button class="l-navbar--toggler" type="button"
