--- a/FAQ.html
+++ b/FAQ.html
@@ -18,8 +18,8 @@
     <header class="l_site-header d-lg-flex align-items-lg-center">
         <div class="container p-sm-0 bgg">
             <div class="bgg2"></div>
-            <nav class="navbar navbar-expand-lg p-sm-0 pt-sm-5 l_header--navbar">
-                <a class="navbar-brand mr-xl-7 mr-lg-5" href="#">
+            <nav class="navbar navbar-expand-lg l_header--navbar">
+                <a class="navbar-brand" href="#">
                     <img src="./images/logo.png" alt="">
                 </a>
                 <button class="l-navbar--toggler" type="button"
@@ -58,8 +58,8 @@
     <main id="l_site-main" class="l_site-main">
         <div class="container">
             <div class="row">
-                <div class="col-12 mt-lg-3 pt-6 pt-sm-0 px-0">
-                    <h1 class="text-center l_faq-title">FAQ</h1>
+                <div class="col-12 p-0">
+                    <h1 class="text-center l_faq-title l_site-title">FAQ</h1>
                     <div class="l_faq-masthead">
                         <div class="l_faq-masthead-illustration"></div>
                         <div class="l_faq-masthead_content">
