--- a/FAQ.html
+++ b/FAQ.html
@@ -153,7 +153,7 @@
                         Напишите нам!
                     </h3>
                 </div>
-                <a href="#" class="btn btn-inline-custom w-100 rounded-medium mb-3 py-3">Связаться</a>
+                <a href="#" class="btn btn-inline-custom">Связаться</a>
             </div>
         </div>
     </main>
