--- a/treatment.html
+++ b/treatment.html
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 mt-lg-4 mt-xxl-5 mb-lx-5">
-                    <h1 class="text-center l_treatment-title">Техподдержка</h1>
+                    <h1 class="text-center l_site-title">Техподдержка</h1>
                     <div class="l_treatment-container">
                         <div class="l_treatment-nav">
                             <nav>
