--- a/first_screen.html
+++ b/first_screen.html
@@ -71,7 +71,7 @@
             <div class="row">
                 <div class="col-12 text-center">
                     <div class="first_screen-container">
-                        <h1 class="first_screen-title">
+                        <h1 class="l_site-title">
                             Добро пожаловать!
                         </h1>
                         <h3 class="first_screen_sub-title">
