--- a/subscription_ended.html
+++ b/subscription_ended.html
@@ -14,7 +14,7 @@
 
     <title>Hello, world!</title>
 </head>
-<body>
+<body class="subscription_end">
 <div class="wrapper">
 <header class="l_header">
     <div class="container p-sm-0">
@@ -71,7 +71,7 @@
             <div class="row">
                 <div class="col-12 text-center">
                     <div class="subs_end-container">
-                        <h1 class="subs_end-title">
+                        <h1 class="l_site-title">
                             Ой! У вас закончилась подписка
                         </h1>
                         <h3 class="subs_end_sub-title">
