--- a/report.html
+++ b/report.html
@@ -69,12 +69,12 @@
     <main id="l_site-main" class="l_site-main">
         <div class="container">
             <div class="row">
-                <div class="col-12 mt-lg-4 mt-xxl-5 mb-lx-5">
-                    <h1 class="text-center l_report-title">Создание нового тикета</h1>
+                <div class="col-12">
+                    <h1 class="text-center l_site-title">Создание нового тикета</h1>
                     <div class="l_add-desc d-flex justify-content-center">
                         <div class="l_report-container">
                             <form>
-                                <div class="form-group mb-lg-4 mb-3">
+                                <div class="form-group mb-xxl-4git mb-3">
                                     <label for="reason_select">Reason:</label>
                                     <select class="form-control custom_select select-default" id="reason_select">
                                         <option selected value="test">Не подходит тарифный план</option>
@@ -85,10 +85,10 @@
                                     </select>
 
                                 </div>
-                                <div class="form-group mb-lg-5 mb-3">
+                                <div class="form-group mb-3 mb-xxl-5">
                                     <textarea class="form-control custom-control custom-field3" name="name" rows="4" placeholder="Type Введите текст шаблона описания"></textarea>
                                 </div>
-                                <button type="submit" class="btn btn-inline-custom4 py-3 mb-3 w-100">Создать тикет</button>
+                                <button type="submit" class="btn btn-inline-custom4">Создать тикет</button>
                             </form>
                         </div>
                     </div>
